# gemview

./: .gitignore  Cargo.toml  LICENSE.md  README.md  RELEASE_NOTES.md
.github/workflows/: rust.yml
src/: imp.rs  lib.rs
src/imp/: buffer.rs  history.rs  mod.rs
src/scheme/: data.rs  file.rs  finger.rs  mod.rs
src/scheme/gemini/: certificate.rs  mod.rs  parser.rs  protocol.rs  request.rs  test.gmi
src/scheme/gopher/: mod.rs  parser.rs
src/scheme/spartan/: mod.rs
src/traits/: mod.rs
src/upload/: imp.rs  mod.rs  upload_widget.ui
