[package]
name = "gemview"
version = "0.5.2"
edition = "2021"
description = "A Gemini protocol browser in a Gtk+ (v4) widget"
authors = ["Nathan Fisher"]
repository = "https://codeberg.org/jeang3nie/gemview"
keywords = ["gemini", "networking", "gtk", "browser"]
categories = ["gui", "network-programming"]
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
lazy_static = "1.4"
mime_open = "0.2"
native-tls = "0.2"
once_cell = "1"
rcgen = "0.9"
textwrap = "0.15"
tree_magic_mini = "3.0"
url = "2.2"
urlencoding = "2.1"

[dependencies.gtk]
version = "0.5"
package = "gtk4"
